--- a/onboarding.html
+++ b/onboarding.html
@@ -40,9 +40,7 @@
 <body class="bg-gray-950 text-white min-h-screen p-8 flex items-center justify-center">
   <form id="onboardingForm" class="bg-gray-900 p-8 rounded-lg shadow-md w-full max-w-xl space-y-4">
     <h2 class="text-2xl font-semibold text-green-400 mb-4 text-center">Create a New Workspace</h2>
-
     <input type="text" id="workspace" required placeholder="Workspace Name" class="w-full px-4 py-2 bg-gray-800 border border-gray-700 rounded-md">
-
     <select id="industry" required class="w-full px-4 py-2 bg-gray-800 border border-gray-700 rounded-md">
       <option value="">Select Industry</option>
       <option>Software</option>
@@ -61,7 +59,6 @@
       <option>Telecommunications</option>
       <option>Government</option>
     </select>
-
     <select id="companySize" required class="w-full px-4 py-2 bg-gray-800 border border-gray-700 rounded-md">
       <option value="">Select Company Size</option>
       <option>1–10 employees</option>
@@ -70,7 +67,6 @@
       <option>201–500 employees</option>
       <option>500+ employees</option>
     </select>
-
     <select id="timezone" required class="w-full px-4 py-2 bg-gray-800 border border-gray-700 rounded-md">
       <option value="">Select Time Zone</option>
       <option value="America/New_York">(GMT-05:00) Eastern Time (US & Canada)</option>
@@ -83,7 +79,6 @@
       <option value="Asia/Tokyo">(GMT+09:00) Tokyo</option>
       <option value="Australia/Sydney">(GMT+10:00) Sydney</option>
     </select>
-
     <div id="planSelection">
       <input type="hidden" id="selectedPlanHidden">
       <div class="grid grid-cols-2 gap-4">
@@ -101,15 +96,11 @@
         </div>
       </div>
     </div>
-
     <label class="block text-sm text-gray-400 mt-2">Optional logo (64x64 PNG only)</label>
     <input type="file" id="logo" accept="image/png" class="w-full text-sm text-gray-400">
-
     <button type="submit" class="w-full bg-green-500 hover:bg-green-600 text-white font-semibold py-2 rounded-md">Create Workspace</button>
   </form>
-
   <div id="toast">Workspace created successfully!</div>
-
   <script>
     async function checkUserPlan() {
       const user = firebase.auth().currentUser;
@@ -122,7 +113,6 @@
         document.getElementById("planSelection").style.display = "none";
       }
     }
-
     function selectPlan(plan) {
       document.getElementById("selectedPlanHidden").value = plan;
       ["Pro", "Starter", "Free", "Enterprise"].forEach(p => {
@@ -136,12 +126,10 @@
         }
       });
     }
-
     document.addEventListener("DOMContentLoaded", () => {
       const form = document.getElementById("onboardingForm");
       if (!form) return;
       checkUserPlan();
-
       const showToast = (message) => {
         const toast = document.getElementById("toast");
         toast.textContent = message;
@@ -150,23 +138,19 @@
           toast.style.display = "none";
         }, 3000);
       };
-
       form.addEventListener("submit", async (e) => {
         e.preventDefault();
         const user = firebase.auth().currentUser;
         if (!user) return;
-
         const db = firebase.firestore();
         const storage = firebase.storage();
         const logoFile = document.getElementById("logo").files[0];
         let logoUrl = "";
-
         if (logoFile) {
           const storageRef = storage.ref(`workspace-logos/${user.uid}-${Date.now()}.png`);
           await storageRef.put(logoFile);
           logoUrl = await storageRef.getDownloadURL();
         }
-
         const data = {
           ownerId: user.uid,
           name: document.getElementById("workspace").value,
@@ -177,12 +161,21 @@
           logoUrl,
           createdAt: firebase.firestore.FieldValue.serverTimestamp()
         };
-
         try {
           const workspaceRef = await db.collection("workspaces").add(data);
-          await db.collection("users").doc(user.uid).update({
-            activeWorkspaceId: workspaceRef.id
-          });
+          const userDocRef = db.collection("users").doc(user.uid);
+          const userSnapshot = await userDocRef.get();
+          if (!userSnapshot.exists) {
+            await userDocRef.set({
+              email: user.email,
+              plan: data.plan,
+              activeWorkspaceId: workspaceRef.id
+            });
+          } else {
+            await userDocRef.update({
+              activeWorkspaceId: workspaceRef.id
+            });
+          }
           showToast("Workspace created successfully!");
           setTimeout(() => {
             window.location.href = "/switch-workspace.html";
