--- a/switch-workspace.html
+++ b/switch-workspace.html
@@ -94,7 +94,7 @@
           div.className = "bg-gray-900 border border-gray-800 rounded-xl p-6 shadow-md hover:ring-2 hover:ring-green-500 transition cursor-pointer";
           div.innerHTML = `
             <div class="flex items-center space-x-4">
-              <img src="${data.logoUrl || 'https://via.placeholder.com/64'}" alt="logo" class="w-12 h-12 rounded-md">
+              <img src="${data.logoUrl || '/assets/default-logo.png'}" alt="logo" class="w-12 h-12 rounded-md">
               <div>
                 <h3 class="text-lg font-semibold">${data.name}</h3>
                 <span class="text-sm text-gray-400">${data.industry}</span>
@@ -107,9 +107,9 @@
           div.onclick = async () => {
             const db = firebase.firestore();
             const user = firebase.auth().currentUser;
-            await db.collection("users").doc(user.uid).update({
+            await db.collection("users").doc(user.uid).set({
               activeWorkspaceId: id
-            });
+            }, { merge: true });
             window.location.href = "/dashboard.html";
           };
           container.appendChild(div);
